--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<h1>Project 02.04 - Shopping List</h1>
+<h1>Project 02.04 - SHOPPING LIST</h1>
 <h3>Get it done today:</h3>
 <input id="userInput" type="text" name="items" placeholder="enter items">
 <button id="enter">Enter</button>
