--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 <h1>Project 02.04 - SHOPPING LIST</h1>
+<h2>New branch Example</h2>
 <h3>Get it done today:</h3>
 <input id="userInput" type="text" name="items" placeholder="enter items">
 <button id="enter">Enter</button>
